# DAC_g-kway

./: .gitmodules  CMakeLists.txt  README.md  declarations.h
gkway/: coarsen.hpp  cuda_check.hpp  graph.hpp  graph_partitioner.hpp  metis_partition.hpp  move_request.hpp  uncoarsen.hpp
main/: main.cu
